--- a/index.html
+++ b/index.html
@@ -6,46 +6,48 @@
   <title>Vibelytics – Feel What Moved Them</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
   <style>
-  @font-face {
-    font-family: 'Rethink Sans';
-    src: url("public/fonts/RethinkSans-Regular.woff2") format("woff2"),
-         url("public/fonts/RethinkSans-Regular.woff") format("woff");
-    font-weight: 400;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Rethink Sans';
-    src: url("public/fonts/RethinkSans-SemiBold.woff2") format("woff2"),
-         url("public/fonts/RethinkSans-SemiBold.woff") format("woff");
-    font-weight: 600;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Rethink Sans';
-    src: url("public/fonts/RethinkSans-Bold.woff2") format("woff2"),
-         url("public/fonts/RethinkSans-Bold.woff") format("woff");
-    font-weight: 700;
-    font-style: normal;
-  }
-  body {
-    font-family: 'Rethink Sans', sans-serif;
-    background: #0f0f1a;
-    color: white;
-    overflow-x: hidden;
-  }
-  .particles-bg {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-</style>
+    @font-face {
+      font-family: 'Rethink Sans';
+      src: url("public/fonts/RethinkSans-Regular.woff2") format("woff2"),
+           url("public/fonts/RethinkSans-Regular.woff") format("woff");
+      font-weight: 400;
+      font-style: normal;
+    }
+    @font-face {
+      font-family: 'Rethink Sans';
+      src: url("public/fonts/RethinkSans-SemiBold.woff2") format("woff2"),
+           url("public/fonts/RethinkSans-SemiBold.woff") format("woff");
+      font-weight: 600;
+      font-style: normal;
+    }
+    @font-face {
+      font-family: 'Rethink Sans';
+      src: url("public/fonts/RethinkSans-Bold.woff2") format("woff2"),
+           url("public/fonts/RethinkSans-Bold.woff") format("woff");
+      font-weight: 700;
+      font-style: normal;
+    }
+    body {
+      font-family: 'Rethink Sans', sans-serif;
+      background: #0f0f1a;
+      color: white;
+      overflow-x: hidden;
+    }
+    .particles-bg {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+  </style>
 </head>
 <body class="flex flex-col min-h-screen">
   <div class="particles-bg" id="particles-js"></div>
   <header class="flex justify-between items-center px-8 py-4">
-    <div><img src="public/vibelytics-logo.png" alt="Vibelytics Logo" class="h-8 md:h-10 lg:h-12 w-auto"></div>
+    <div class="flex items-center">
+      <img src="public/vibelytics-logo.png" alt="Vibelytics Logo" class="h-8 md:h-10 lg:h-12 w-auto object-contain max-w-[200px]">
+    </div>
     <button onclick="openSignup()" class="bg-gradient-to-r from-purple-600 to-pink-500 px-5 py-2 rounded-lg text-white font-bold hover:scale-105 transition">Join the List</button>
   </header>
 
@@ -59,15 +61,15 @@
     <h2 class="text-center text-3xl font-bold mb-10">The Magic Behind the Moments</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto px-6">
       <div class="p-6 bg-black/50 rounded-lg hover:scale-105 hover:shadow-lg transition">
-        <h3 class="text-xl font-bold text-purple-400 mb-3">Capture the Energy</h3>
+        <h3 class="text-xl font-semibold text-purple-400 mb-3">Capture the Energy</h3>
         <p>Our AI sees what matters — the raw, unfiltered magic of live crowds in motion.</p>
       </div>
       <div class="p-6 bg-black/50 rounded-lg hover:scale-105 hover:shadow-lg transition">
-        <h3 class="text-xl font-bold text-purple-400 mb-3">Feel the Pulse</h3>
+        <h3 class="text-xl font-semibold text-purple-400 mb-3">Feel the Pulse</h3>
         <p>Privacy-first emotion detection reveals the collective heartbeat of your audience.</p>
       </div>
       <div class="p-6 bg-black/50 rounded-lg hover:scale-105 hover:shadow-lg transition">
-        <h3 class="text-xl font-bold text-purple-400 mb-3">Unlock the Story</h3>
+        <h3 class="text-xl font-semibold text-purple-400 mb-3">Unlock the Story</h3>
         <p>Transform emotional insights into unforgettable experiences that resonate.</p>
       </div>
     </div>
