--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="particles-bg" id="particles-js"></div>
   <header class="flex justify-between items-center px-8 py-4">
     <div class="flex items-center">
-      <img src="public/vibelytics-logo.png" alt="Vibelytics Logo" class="h-8 md:h-10 lg:h-12 w-auto object-contain max-w-[200px]">
+      <img src="public/vibelytics-logo.png" alt="Vibelytics Logo" class="h-10 w-auto object-contain max-w-[160px]" style="max-height: 48px;">
     </div>
     <button onclick="openSignup()" class="bg-gradient-to-r from-purple-600 to-pink-500 px-5 py-2 rounded-lg text-white font-bold hover:scale-105 transition">Join the List</button>
   </header>
