--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <section class="text-center py-16 fade-in">
     <div class="flex justify-center mb-6">
-      <img src="public/vibelytics-logo-white.png" alt="Vibelytics Logo" class="h-24 w-auto object-contain max-w-[180px]">
+      <img src="public/vibelytics-logo-white.png" alt="Vibelytics Logo" class="h-16 md:h-24 lg:h-32 w-auto mx-auto object-contain">
     </div>
     <h1 class="text-5xl font-bold bg-gradient-to-r from-pink-500 to-purple-600 bg-clip-text text-transparent mb-4">Feel What Moved Them</h1>
     <p class="text-xl text-gray-300 mb-6">The Emotional Intelligence Layer for Live Entertainment</p>
