--- a/index.html
+++ b/index.html
@@ -1,73 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vibelytics – Feel What Moved Them</title>
-  <link rel="stylesheet" href="public/style.css">
+  <!-- Vite will bundle Tailwind via main.js -->
 </head>
-<body>
-  <div class="particles-bg" id="particles-js"></div>
-  <header class="header">
-    <button onclick="openSignup()" class="cta-button">Join the List</button>
+<body class="relative bg-primary-bg font-rethink overflow-x-hidden">
+
+  <!-- Particles background -->
+  <div id="particles-js" class="absolute inset-0 z-0"></div>
+
+  <!-- Header -->
+  <header class="relative z-10 flex justify-end p-6">
+    <button class="btn-gradient">Join the List</button>
   </header>
 
-  <section class="hero fade-in">
-    <div class="logo-container">
-      <img src="public/vibelytics-logo-white.png" alt="Vibelytics Logo">
+  <!-- Hero -->
+  <main class="relative z-10 flex flex-col items-center text-center px-4 pt-20 pb-40">
+    <img src="/vibelytics-logo-white.png" alt="Vibelytics Logo"
+         class="h-16 md:h-24 lg:h-32 fade-in" data-io />
+    <h1 class="gradient-text text-4xl md:text-6xl font-bold mt-6 fade-in" data-io>
+      Feel What Moved Them
+    </h1>
+    <p class="text-secondary-text mt-4 text-lg fade-in" data-io>
+      The Emotional Intelligence Layer for Live Entertainment
+    </p>
+    <button class="btn-gradient mt-8 fade-in" data-io>
+      Join the List
+    </button>
+  </main>
+
+  <!-- Why Now -->
+  <section class="relative z-10 py-20 px-4">
+    <h2 class="text-primary-text text-3xl font-semibold text-center mb-12 fade-in" data-io>
+      Why Now
+    </h2>
+    <div class="max-w-6xl mx-auto grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
+      <!-- Card 1 -->
+      <div class="bg-black bg-opacity-50 rounded-lg p-6 transform transition hover:scale-105 hover:shadow-[0_0_20px_rgba(127,0,255,0.5)] fade-in" data-io>
+        <h3 class="text-accent font-semibold text-xl mb-2">Live Energy Pulse & API</h3>
+        <p class="text-secondary-text">Real-time insights with sub-500ms latency, perfectly synced to your setlist.</p>
+      </div>
+      <!-- Card 2 -->
+      <div class="bg-black bg-opacity-50 rounded-lg p-6 transform transition hover:scale-105 hover:shadow-[0_0_20px_rgba(127,0,255,0.5)] fade-in" data-io>
+        <h3 class="text-accent font-semibold text-xl mb-2">Privacy-First</h3>
+        <p class="text-secondary-text">No facial IDs, no stored identities—100% anonymous crowd analytics.</p>
+      </div>
+      <!-- Card 3 -->
+      <div class="bg-black bg-opacity-50 rounded-lg p-6 transform transition hover:scale-105 hover:shadow-[0_0_20px_rgba(127,0,255,0.5)] fade-in" data-io>
+        <h3 class="text-accent font-semibold text-xl mb-2">Concert-Grade Dataset</h3>
+        <p class="text-secondary-text">Trained on strobe, smoke, &amp; 10K-person crowds for rock-solid accuracy.</p>
+      </div>
     </div>
-    <h1>Feel What Moved Them</h1>
-    <p>The Emotional Intelligence Layer for Live Entertainment</p>
-    <button onclick="openSignup()" class="cta-button">Join the List</button>
   </section>
 
-  <section class="why-now fade-in">
-    <h2>Why Now</h2>
-    <div class="why-now-grid">
-      <div class="why-card">
-        <h3>Emotion Without Surveillance</h3>
-        <p>No phones. No surveys. No facial recognition. Audience-first, privacy-safe analytics.</p>
-      </div>
-      <div class="why-card">
-        <h3>Artist-Aligned Insights</h3>
-        <p>Emotion data matched to setlists, encore moments, and show flow—finally measurable.</p>
-      </div>
-      <div class="why-card">
-        <h3>The Cultural Feedback Loop</h3>
-        <p>Transform real crowd energy into stories, sponsorship wins, and creative feedback.</p>
-      </div>
+  <!-- Footer -->
+  <footer class="relative z-10 py-8 px-4 text-center text-secondary-text">
+    <div class="mb-4">
+      <a href="https://twitter.com/vibelyticsai" class="mx-2 hover:text-primary-text">Twitter</a>
+      <a href="https://www.tiktok.com/@vibelyticsai" class="mx-2 hover:text-primary-text">TikTok</a>
     </div>
-  </section>
-
-  <footer class="footer">
-    <div class="socials">
-      <a href="https://twitter.com/vibelyticsai" target="_blank">Twitter</a>
-      <a href="https://tiktok.com/@vibelyticsai" target="_blank">TikTok</a>
-    </div>
-    <p>&copy; 2025 Vibelytics. All rights reserved.</p>
+    <p>© 2025 Vibelytics. All rights reserved.</p>
   </footer>
 
-  <script>
-    function openSignup() {
-      window.open('https://signup.vibelytics.ai', '_blank');
-    }
-    document.addEventListener('DOMContentLoaded', () => {
-      const faders = document.querySelectorAll('.fade-in');
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('show');
-          }
-        });
-      }, { threshold: 0.1 });
-      faders.forEach(fader => observer.observe(fader));
+  <!-- Main JS -->
+  <script type="module">
+    import 'particles.js';
+    // initialize particles.js
+    window.particlesJS.load('particles-js', '/particles.json', () => {
+      console.log('🎉 particles loaded');
     });
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS.load('particles-js', 'particles.json', function() {
-      console.log('particles.js config loaded');
-    });
+    // scroll‐fade using IntersectionObserver
+    const io = new IntersectionObserver((entries) => {
+      entries.forEach(e => {
+        if (e.isIntersecting) e.target.classList.add('visible');
+      });
+    }, { threshold: 0.1 });
+    document.querySelectorAll('[data-io]').forEach(el => io.observe(el));
   </script>
 </body>
 </html>
