--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/vibelytics-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/vibelytics-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vibelytics - Emotional Intelligence for Live Entertainment</title>
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap" rel="stylesheet">
